--- a/scss/components/_page-start.scss
+++ b/scss/components/_page-start.scss
@@ -52,6 +52,7 @@
   }
 
   .start-hdr {
+    width: 867px;
     margin-top: 293px;
 
     color: $text-color;
