--- a/scss/mobile/_page-start-mobile.scss
+++ b/scss/mobile/_page-start-mobile.scss
@@ -38,6 +38,8 @@
 }
 
 .start-hdr {
+  width: 286px;
+
   margin-top: 215px;
 
   color: $text-color;
